welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:26: error: not found: value color
	flower(color.RED);
               ^FlowerPot:30: error: not found: value color
	flower(color.CYAN);
               ^FlowerPot:37: error: not found: value color
	flower(color.ORANGE);
               ^FlowerPot:44: error: not found: value color
	flower(color.GREEN);
               ^FlowerPot:48: error: not found: value color
	flower(color.PINK);
               ^